--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
 		"@types/node": "^12.0.0",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
+		"axios": "^0.25.0",
+		"immer": "^9.0.12",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-redux": "^7.2.6",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"recharts": "^2.1.2",
+		"redux": "^4.1.2",
+		"redux-thunk": "^2.4.1",
 		"typescript": "^4.1.2",
 		"web-vitals": "^1.0.1"
 	},
@@ -48,6 +53,7 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss7-compat": "^2.2.7",
+		"@types/react-redux": "^7.1.22",
 		"@types/react-router": "^5.1.16",
 		"@types/react-router-dom": "^5.1.8",
 		"autoprefixer": "^9",
