--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"@types/react-dom": "^17.0.0",
 		"axios": "^0.25.0",
 		"immer": "^9.0.12",
+		"localforage": "^1.10.0",
+		"lottie-web": "^5.8.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-redux": "^7.2.6",
