--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
 		"axios": "^0.25.0",
+		"dayjs": "^1.11.0",
 		"immer": "^9.0.12",
 		"localforage": "^1.10.0",
 		"lottie-web": "^5.8.1",
